o'zgartirish kiritildi
