# api/docs/swagger.json
@@ -101,6 +101,11 @@
         },
         "/users/delete": {
             "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "This endpoint deletes a user by their ID",
                 "produces": [
                     "application/json"
@@ -109,15 +114,6 @@
                     "users"
                 ],
                 "summary": "Delete a user",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "User ID",
-                        "name": "id",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -142,6 +138,11 @@
         },
         "/users/password": {
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "This endpoint updates the user's password",
                 "consumes": [
                     "application/json"
@@ -188,6 +189,11 @@
         },
         "/users/profile": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "This endpoint retrieves the user profile by their ID",
                 "produces": [
                     "application/json"
@@ -196,15 +202,6 @@
                     "users"
                 ],
                 "summary": "Get user profile",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "User ID",
-                        "name": "id",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -229,6 +226,11 @@
         },
         "/users/update": {
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "This endpoint updates user profile details",
                 "consumes": [
                     "application/json"
